added weekend special products section

--- a/index.html
+++ b/index.html
@@ -164,11 +164,102 @@
           </div>
         </div>
       </section>
-      <section>
-        <h1 class="title">Check out our best coffee beans</h1>
+      <section class="checkout-beans-section">
+        <div class="row">
+          <div class="flex-1 col-content">
+            <h1>Check out our best coffee beans</h1>
+            <a href="#" class="explore-btn btn-secondary">
+              <p>Explore our products</p>
+              <img src="./photos/icons/right-arrow.svg" alt="" />
+            </a>
+          </div>
+          <div class="flex-1 col-photo">
+            <img src="./photos/custom-coffee-pouch-bag.webp" alt="" />
+          </div>
+        </div>
       </section>
       <section>
-        <h1 class="title">Weekend special products</h1>
+        <div class="weekend-special-row">
+          <h1>Weekend special products</h1>
+          <p>Check out our weekend special products and get discounts!</p>
+          <ul>
+            <a href=""><li>Accessories</li></a>
+            <a href=""><li>Coffee beans</li></a>
+            <a href=""><li>Apposal</li></a>
+            <a href=""><li>Instant coffee</li></a>
+            <a href=""><li>Bundle</li></a>
+          </ul>
+          <div class="weekend-products-menu">
+            <div class="product-card">
+              <img
+                src="./photos/coffee-accessories-1.jpg"
+                class="weekend-product-card-img"
+              />
+              <div class="product-description">
+                <span>Miele CM6 Thermal Conate</span>
+                <div>
+                  <span class="old-price">$36</span>
+                  <span class="new-price">$12</span>
+                </div>
+                <div class="add-to-cart-section">
+                  <div>
+                    <p class="add-to-cart">Add to cart</p>
+                    <img src="./photos/icons/right-arrow.svg" alt="" />
+                  </div>
+                  <a href="" class="heart-btn">
+                    <img src="./photos/icons/heart.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <img
+                src="./photos/coffee-accessories-2.jpg"
+                alt=""
+                class="weekend-product-card-img"
+              />
+              <div class="product-description">
+                <span>NEW-Ember Cup</span>
+                <div>
+                  <span class="old-price">$30</span>
+                  <span class="new-price">$6.48</span>
+                </div>
+                <div class="add-to-cart-section">
+                  <div>
+                    <p class="add-to-cart">Add to cart</p>
+                    <img src="./photos/icons/right-arrow.svg" alt="" />
+                  </div>
+                  <a href="" class="heart-btn">
+                    <img src="./photos/icons/heart.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <img
+                src="./photos/coffee-accessories-3.jpg"
+                alt=""
+                class="weekend-product-card-img"
+              />
+              <div class="product-description">
+                <span>Espro P3 French Press</span>
+                <div>
+                  <span class="old-price">$10</span>
+                  <span class="new-price">$5.22</span>
+                </div>
+                <div class="add-to-cart-section">
+                  <div>
+                    <p class="add-to-cart">Add to cart</p>
+                    <img src="./photos/icons/right-arrow.svg" alt="" />
+                  </div>
+                  <a href="" class="heart-btn">
+                    <img src="./photos/icons/heart.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <section>
         <h1 class="title">We care about the quality of our products</h1>
