added we-care-abt-quality-of-products section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="row">
           <div class="flex-1 col-content">
             <h1>Check out our best coffee beans</h1>
-            <a href="#" class="explore-btn btn-secondary">
+            <a href="#" class="explore-btn">
               <p>Explore our products</p>
               <img src="./photos/icons/right-arrow.svg" alt="" />
             </a>
@@ -262,7 +262,70 @@
         </div>
       </section>
       <section>
-        <h1 class="title">We care about the quality of our products</h1>
+        <div class="quality-products-container">
+          <div class="quality-products-image">
+            <img src="./photos/coffee-chat.svg" alt="" />
+          </div>
+          <div class="quality-products-content">
+            <h1>We care about the quality of our products</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo
+              aliquid placeat unde magnam dolorum perferendis
+            </p>
+            <div class="quality-advertise-row">
+              <div class="quality-advertise-item">
+                <img
+                  src="./photos/community.svg"
+                  alt=""
+                  class="advertise-svg-img"
+                />
+                <div class="quality-advertise-item-content">
+                  <h3>Active community</h3>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+              </div>
+              <div class="quality-advertise-item">
+                <img
+                  src="./photos/product-design.svg"
+                  alt=""
+                  class="advertise-svg-img"
+                />
+                <div class="quality-advertise-item-content">
+                  <h3>Product design</h3>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+              </div>
+            </div>
+            <div class="quality-advertise-row">
+              <div class="quality-advertise-item">
+                <img
+                  src="./photos/premium-quality.svg"
+                  alt=""
+                  class="advertise-svg-img"
+                />
+                <div class="quality-advertise-item-content">
+                  <h3>Premium quality</h3>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+              </div>
+              <div class="quality-advertise-item">
+                <img
+                  src="./photos/best-material.svg"
+                  alt=""
+                  class="advertise-svg-img"
+                />
+                <div class="quality-advertise-item-content">
+                  <h3>Best material</h3>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+              </div>
+            </div>
+            <a href="#" class="explore-btn btn-secondary">
+              <p>Explore our products</p>
+              <img src="./photos/icons/right-arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
       </section>
       <section>
         <h1 class="title">Join in and get %25 OFF!</h1>
