--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@
             <img src="./photos/coffee-chat.svg" alt="" />
           </div>
           <div class="quality-products-content">
-            <h1>We care about the quality of our products</h1>
+            <h1 class="text-brown">
+              We care about the quality of our products
+            </h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo
               aliquid placeat unde magnam dolorum perferendis
@@ -280,7 +282,7 @@
                   class="advertise-svg-img"
                 />
                 <div class="quality-advertise-item-content">
-                  <h3>Active community</h3>
+                  <h3 class="text-brown">Active community</h3>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
               </div>
@@ -291,7 +293,7 @@
                   class="advertise-svg-img"
                 />
                 <div class="quality-advertise-item-content">
-                  <h3>Product design</h3>
+                  <h3 class="text-brown">Product design</h3>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
               </div>
@@ -304,7 +306,7 @@
                   class="advertise-svg-img"
                 />
                 <div class="quality-advertise-item-content">
-                  <h3>Premium quality</h3>
+                  <h3 class="text-brown">Premium quality</h3>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
               </div>
@@ -315,7 +317,7 @@
                   class="advertise-svg-img"
                 />
                 <div class="quality-advertise-item-content">
-                  <h3>Best material</h3>
+                  <h3 class="text-brown">Best material</h3>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
               </div>
@@ -327,11 +329,40 @@
           </div>
         </div>
       </section>
-      <section>
-        <h1 class="title">Join in and get %25 OFF!</h1>
+      <section class="newsletter-section">
+        <div class="newsletter-container">
+          <div>
+            <img
+              src="./photos/expresso_with_marshmellow-removebg-preview-cut.png"
+              alt=""
+              class="newsletter-image"
+            />
+          </div>
+          <div class="newsletter-content">
+            <h1>Join in and get %25 OFF!</h1>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing. Lorem, ipsum
+              dolor.
+            </p>
+            <form class="newsletter-form">
+              <div class="newsletter-input-group">
+                <input type="text" placeholder="Email address" />
+                <img src="./photos/icons/gmail.svg" alt="" />
+              </div>
+              <button class="subscribe-btn">SUBSCRIBE</button>
+            </form>
+          </div>
+          <div>
+            <img
+              src="./photos/iced_cappucino-removebg-preview-cut.png"
+              alt=""
+              class="newsletter-image"
+            />
+          </div>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>footer</footer>
     <script src="js/script.js"></script>
   </body>
 </html>
