--- a/index.html
+++ b/index.html
@@ -362,7 +362,48 @@
         </div>
       </section>
     </main>
-    <footer>footer</footer>
+    <footer>
+      <div class="footer-info-section">
+        <div class="footer-col">
+          <h2>Privacy</h2>
+          <a href="">Terms of service</a>
+          <a href="">Privacy policy</a>
+          <a href="">Contact</a>
+        </div>
+        <div class="footer-col">
+          <h2>Services</h2>
+          <a href="">Shop</a>
+          <a href="">Menu</a>
+          <a href="">Weekend special</a>
+        </div>
+        <div class="footer-col">
+          <h2>About Us</h2>
+          <a href="">Find a location</a>
+          <a href="">Our map</a>
+          <a href="">About us</a>
+        </div>
+        <div class="footer-col">
+          <h2>Information</h2>
+          <a href="">Plan & pricing</a>
+          <a href="">News</a>
+          <a href="">Sell your product</a>
+        </div>
+        <div class="footer-col">
+          <h2>Social media</h2>
+          <div class="social-media-links">
+            <a href=""><img src="./photos/icons/facebook.svg" alt="" /></a>
+            <a href=""><img src="./photos/icons/twitter.svg" alt="" /></a>
+            <a href=""><img src="./photos/icons/instagram.svg" alt="" /></a>
+            <a href=""><img src="./photos/icons/youtube.svg" alt="" /></a>
+            <a href=""><img src="./photos/icons/linkedIn.svg" alt="" /></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bar-section">
+        <span>Copyright | All rights reserved</span>
+        <span>Powered by Yangon Coffeo team</span>
+      </div>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
